[TASK] first Events with jQuery

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,21 +1,36 @@
-body {
-  background: #F0F0F0; }
+html, body {
+  background: #F0F0F0;
+  margin: 0px;
+  padding: 0px; }
+
+div {
+  width: 100%;
+  display: flex; }
 
 .shadow, .button, .display {
   box-shadow: 0px 1px 1px 0px #242424; }
 
 .button {
-  width: 85px;
-  height: 85px;
+  width: 90px;
+  height: 60px;
   color: #FFFFFF;
   background: #3333ff;
   border: none;
   font-size: 1.6rem;
   font-weight: bold;
-  margin: 4px 2px; }
+  margin: 4px 3px; }
+  .button:first-child {
+    margin-left: 6px; }
+  .button:last-child {
+    margin-right: 6px; }
+
+.display-container {
+  margin: 0 5px;
+  padding: 0;
+  width: 375px; }
 
 .display {
   background: #FFFFFF;
   width: 100%;
   height: 100px;
-  margin-bottom: 20px; }
+  margin-bottom: 5px; }
