--- a/app/scss/_misc.scss
+++ b/app/scss/_misc.scss
@@ -1,5 +1,12 @@
-body {
+html, body {
   background: $bg-color;
+  margin: 0px;
+  padding: 0px;
+}
+
+div {
+  width: 100%;
+  display: flex;
 }
 
 .shadow {
