--- a/app/scss/_button.scss
+++ b/app/scss/_button.scss
@@ -1,12 +1,19 @@
-$btn-size: 85px;
+$btn-width: 90px;
+$btn-heigh: 60px;
 .button {
   @extend .shadow;
-  width: $btn-size;
-  height: $btn-size;
+  width: $btn-width;
+  height: $btn-heigh;
   color: $color-btn;
   background: $bg-color-btn;
   border: none;
   font-size: 1.6rem;
   font-weight: bold;
-  margin: 4px 2px;
+  margin: 4px 3px;
+  &:first-child {
+    margin-left: 6px;
+  }
+  &:last-child {
+    margin-right: 6px;
+  }
 }
