--- a/app/scss/_display.scss
+++ b/app/scss/_display.scss
@@ -1,7 +1,14 @@
+.display-container {
+    margin: 0 5px;
+    padding: 0;
+    width: 375px;
+    ;
+}
+
 .display {
-  @extend .shadow;
-  background: $bg-color-white;
-  width: 100%;
-  height: 100px;
-  margin-bottom: 20px;
+    @extend .shadow;
+    background: $bg-color-white;
+    width: 100%;
+    height: 100px;
+    margin-bottom: 5px;
 }
